# shiny

./: .gitignore  CMakeLists.txt  README.md
examples/: adder.swift  assign_function.swift  assign_top_level.swift  class.swift  fib.swift  test.swift  uncallable_target.swift
include/: bytecode.h
include/vm/: vm.h
src/: CMakeLists.txt  ast.h  ast_node.h  ast_printer.h  built_ins.h  bytecode.h  compiler.h  core.cpp  debug.cc  debug.h  error.h  main.cc  main.cpp  parser.h  scanner.cpp  scanner.h  shiny.cc  shiny.h  type.h  type_checker.h
src/ast/: ast_node.h  ast_printer.h
src/frontend/: ast_pretty_printer.h  ast_visitor.h  compiler.h  error.h  expr.h  factory.h  main.cpp  parser.h  scanner.h  stmt.h  string_interner.h  token.h  type.h  type_constraint.h  type_inference.h  union_find.h  var.h
src/runtime/: object.cc  object.h  object_ptr.cc  object_ptr.h  object_ref.cc  object_ref.h  object_ref_inner.h  value.cc  value.h
src/vm/: value.h  vm.cc  vm.h
tests/: CMakeLists.txt  compiler_test.cpp  e2e_test.cpp  parser_test.cpp  scanner_test.cpp  type_equality_test.cpp  union_find_test.cpp
tests/e2e/: adder.swift  assign.swift  assign_in_closure.swift  assign_in_func.swift  boolean.swift  double.swift  factorial.swift  ifs.swift  method_calls.swift  nested_func.swift  nested_objects.swift  objects.swift  simple_function.swift
